--- a/result.html
+++ b/result.html
@@ -21,7 +21,7 @@
  </p>
 
  <div id = "cenButtons">
-  <input type = "button" class = "otherButtons" value = "Again?" onclick = " window.location.href = 'DoYouKnowBeauty.html';">
+  <input type = "button" class = "otherButtons" value = "Again?" onclick = " window.location.href = 'index.html';">
  </div>
 
  <script>
